# algorithms_analysis

./: .gitignore  README.md
.cache/: graph_example.txt  graph_example_2.txt  graph_example_4.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/algo_analysis/: main.cpp
cpp/algo_analysis/memory/: memory.cpp
cpp/cmake/: boost.cmake  set_ifndef.cmake
cpp/include/algo_analysis/: task.hpp
cpp/include/algo_analysis/algorithm/: algorithm.hpp
cpp/include/algo_analysis/algorithms/: algorithm.hpp  bfs.hpp  bfs_with_zeroes.hpp  dfs.hpp  dijkstra.hpp  dijkstra_with_fib.hpp  floid.hpp  ford_bellman.hpp
cpp/include/algo_analysis/graph/: graph.hpp
cpp/include/algo_analysis/graphs/: adjacency_list_graph.hpp  edge.hpp  edges_list_graph.hpp
cpp/include/algo_analysis/memory/: memory.hpp
cpp/include/algo_analysis/task/: task.hpp
cpp/micro_benchmarks/: CMakeLists.txt  README.md  bfs.cpp  dfs.cpp  dijkstra.cpp  dijkstra_with_fib.cpp  floid.cpp  ford_bellman.cpp
cpp/micro_benchmarks/.data/: task_01.txt
cpp/micro_benchmarks/benchmarks_results/MacOS/: bfs.json  dfs.json  dijkstra.json  dijkstra_with_fib.json  floid.json  ford_bellman.json
cpp/tests/: CMakeLists.txt  tests.hpp
cpp/tests/.data/: graph_example_1.txt  task_01.txt  task_cycle_with_extra_edges.txt  task_full_graph.txt  task_full_graph_ones_and_zeroes.txt  task_several_components.txt  task_tree.txt  task_tree_only_ones.txt
cpp/tests/algorithms/: bfs_test.cpp  bfs_with_zero_edges_test.cpp  bfs_with_zeroes_test.cpp  dfs_test.cpp  dijkstra_test.cpp  dijkstra_with_fib_test.cpp  floid_test.cpp  ford_bellman_test.cpp
cpp/tests/graphs/: edges_list_graph.cpp  graph_test.cpp
cpp/tests/task/: task_test.cpp
docs/: algorithms.md  architecture.md  requirements.md
examples/: CMakeLists.txt  README.md  dfs.cpp
examples/.data/: graph_example_3.txt
examples/ford_bellman/: ford_bellman.cpp
legacy/src/: CMakeLists.txt  main.cpp
legacy/src/algorithms/: algorithms.hpp
legacy/src/graph/: graph.hpp
legacy/src/scripts/: build.sh  format_source_code.sh
legacy/src/tasks/: memory.cpp  memory.hpp
legacy/src/tests/: bfs_test.cpp  bfs_with_zero_edges_test.cpp  dfs_test.cpp  dijkstra_test.cpp  tests.hpp
scripts/: build_algo_analysis.sh  build_examples.sh  format_source_code.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/: algorithms.cpp  algorithms.hpp
src/graph/: graph.hpp  readme.md
src/tasks/: memory.cpp  memory.hpp  tasks.hpp
src/tests/: bfs_test.cpp  bfs_with_zero_edges_test.cpp  dfs_test.cpp  dijkstra_test.cpp  ford_bellman_test.cpp  graph_test.cpp
